@@ -2321,7 +2321,7 @@ directory, select it instead of creating an additional one."
                         (car (assoc diredc-shell-default diredc-shell-list))))
         (d1 (expand-file-name dired-directory))
         (f1 (or (expand-file-name (dired-file-name-at-point)) ""))
-        (t1 (or (dired-get-marked-files) "")))
+        (t1 (or (mapconcat 'identity (dired-get-marked-files) "' '") "")))
    (while (or (not shell-choice)
               (zerop (length shell-choice)))
      (setq minibuffer-history '("")
@@ -2346,9 +2346,9 @@ directory, select it instead of creating an additional one."
      (setq window-list (remq d1-window window-list))
      (when (= 1 (setq len (length window-list)))
        (select-window (car window-list) 'norecord)
-             f2        (or (dired-file-name-at-point) "")
-             t2        (or (dired-get-marked-files) "")))
        (setq d2        (expand-file-name dired-directory)
+             f2        (or (expand-file-name (dired-file-name-at-point)) "")
+             t2        (or (mapconcat 'identity (dired-get-marked-files) "' '") "")))
      (select-window d1-window 'norecord)
      (select-window (split-window-below (- 0 diredc-shell-lines)))
      (funcall (nth 1 (assoc shell-choice diredc-shell-list))
